--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "host": "vite --host"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
-    "react-router-dom": "^6.14.2"
+    "react-router-dom": "^6.14.2",
+    "react-sparklines": "^1.7.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
