--- a/.env
+++ b/.env
@@ -1,7 +1,13 @@
-  REACT_API_KEY = AIzaSyDCXQJRsprcrFzFfh_gocSSmRawP7WP9oU
-  REACT_AUTH_DOMAIN = cryptotrix-872e2.firebaseapp.com
-  REACT_PROJECT_ID = cryptotrix-872e2
-  REACT_STORAGE_BUCKET = cryptotrix-872e2.appspot.com
-  REACT_MESSAGING_SENDER_ID = 169520885964
-  REACT_APP_ID = 1:169520885964:web:3b43db443a16b901cd5269
+  REACT_APP_FIREBASE_API_KEY = AIzaSyDCXQJRsprcrFzFfh_gocSSmRawP7WP9oU
+  REACT_APP_FIREBASE_AUTH_DOMAIN = cryptotrix-872e2.firebaseapp.com
+  REACT_APP_FIREBASE_PROJECT_ID = cryptotrix-872e2
+  REACT_APP_FIREBASE_STORAGE_BUCKET = cryptotrix-872e2.appspot.com
+  REACT_APP_FIREBASE_MESSAGING_SENDER = 169520885964
+  REACT_APP_FIREBASE_APP_ID = 1:169520885964:web:3b43db443a16b901cd5269
 
+  # apiKey: import.meta.env.REACT_APP_FIREBASE_API_KEY,
+  # authDomain: import.meta.env.REACT_APP_FIREBASE_AUTH_DOMAIN,
+  # projectId: import.meta.env.REACT_APP_FIREBASE_PROJECT_ID,
+  # storageBucket: import.meta.env.REACT_APP_FIREBASE_STORAGE_BUCKET,
+  # messagingSenderId: import.meta.env.REACT_APP_FIREBASE_MESSAGING_SENDER,
+  # appId: import.meta.env.REACT_APP_FIREBASE_APP_ID,
